chore: alignment and tooltip fixes

--- a/admin/frontend/src/components/sidebar/Sidebar.scss
+++ b/admin/frontend/src/components/sidebar/Sidebar.scss
@@ -20,6 +20,10 @@
   width: 72px;
 }
 
+.top-menu {
+  padding-top: 8px;
+}
+
 .sidebar-icon-container {
   width: 38px;
   display: flex;
